added syntax, postfix

--- a/AnalysisLib/AnalysisLib.vcxproj.filters
+++ b/AnalysisLib/AnalysisLib.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="syntax.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ReversePolish.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ElementTypes.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
