--- a/AnalysisLib/AnalysisLib.vcxproj
+++ b/AnalysisLib/AnalysisLib.vcxproj
@@ -139,13 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Errors.cpp" />
+    <ClCompile Include="Errors.h" />
     <ClCompile Include="ReversePolish.h" />
     <ClCompile Include="Syntax.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calculator.h" />
     <ClInclude Include="ElementTypes.h" />
+    <ClInclude Include="Lexema.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
