--- a/AnalysisLib/AnalysisLib.vcxproj.filters
+++ b/AnalysisLib/AnalysisLib.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="ReversePolish.h">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="Errors.cpp">
+    <ClCompile Include="Errors.h">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -31,6 +31,9 @@
     </ClInclude>
     <ClInclude Include="Calculator.h">
       <Filter>Исходные файлы\Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Lexema.h">
+      <Filter>Исходные файлы</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
